--- a/src/App.css
+++ b/src/App.css
@@ -252,6 +252,44 @@
   font-weight: bolder;
 }
 
+#PageFaq {
+  background-color: rgb(250, 181, 198);
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#PageFaq p.title {
+  text-align: center;
+  margin: 0px 0px 20px 0px;
+  font-size: 36px;
+  letter-spacing: -2px;
+  font-family: 'chantal';
+  flex-basis: 100%;
+}
+
+#PageFaq .faq-container {
+  flex-basis: 320px;
+  max-width: 360px;
+  text-align: center;
+}
+
+#PageFaq .header {
+  display: inline-block;
+  font-family: 'chantal';
+  font-size: 16px;
+  letter-spacing: -0.1rem;
+  padding: 4px;
+  background-color: rgb(131, 117, 171);
+  width: calc(100% - 8px);
+}
+
+.faq-container p {
+  font-weight: bold;
+  text-align: initial;
+  font-size: 14px;
+}
+
 #Page5 {
   padding-top: 0px;
   background-color: rgb(131, 117, 171);
