--- a/src/App.css
+++ b/src/App.css
@@ -269,8 +269,7 @@
 }
 
 #PageFaq .faq-container {
-  flex-basis: 320px;
-  max-width: 360px;
+  max-width: 450px;
   text-align: center;
 }
 
@@ -282,6 +281,7 @@
   padding: 4px;
   background-color: rgb(131, 117, 171);
   width: calc(100% - 8px);
+  color: white;
 }
 
 .faq-container p {
