--- a/src/App.css
+++ b/src/App.css
@@ -57,11 +57,13 @@ html {
 #Main-Preview {
   flex-basis: 50%;
   padding-left: 10%;
+  padding-top: 2%;
 }
 
 #Preview-Image {
-  width: 320px;
-  height: 320px;
+  width: 75%;
+  max-width: 400px;
+  height: auto;
   border: solid 4px white;
 }
 
@@ -105,6 +107,11 @@ html {
   justify-content: center;
 }
 
+#Connect-Button {
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
 /* Minimum aspect ratio */
 @media (max-width: 800px) {
   #Home-Content {
@@ -145,6 +152,11 @@ html {
 .page {
   padding: 32px 5% 16px 5%;
   display: flex;
+}
+
+.page a,
+.page a:active {
+  color: black;
 }
 
 /* Minimum aspect ratio */
@@ -297,6 +309,46 @@ html {
 }
 
 .faq-container p {
+  font-weight: bold;
+  text-align: initial;
+  font-size: 14px;
+}
+
+#Roadmap {
+  background-color: rgb(236, 196, 85);
+  background-image: url('./assets/roadmap_background.png');
+  background-position: bottom;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-bottom: 13%;
+}
+
+#Roadmap p.title {
+  text-align: center;
+  margin: 0px 0px 20px 0px;
+  font-size: 36px;
+  font-family: 'Gochi Hand';
+  flex-basis: 100%;
+}
+
+#Roadmap .roadmap-container {
+  max-width: 450px;
+  text-align: center;
+  margin: 0px 4px;
+}
+
+#Roadmap .header {
+  display: inline-block;
+  font-family: 'Gochi Hand';
+  font-size: 20px;
+  font-weight: 700;
+  width: calc(100% - 8px);
+}
+
+.roadmap-container p {
   font-weight: bold;
   text-align: initial;
   font-size: 14px;
